--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# Ignore application configuration
+/config/application.yml
